新增首頁與團頁面分流

--- a/buying/index-K-doll-bag.html
+++ b/buying/index-K-doll-bag.html
@@ -76,15 +76,11 @@
     <!--需要更改的地方1-->
     <div class="product-wrapper">
       <div class="product-card" data-price="240">
-        <img src="image/K2.jpg" alt="生日賀卡">
-        <div class="product-title">生日賀卡 - $240</div>
+        <img src="image/K-doll-bag/DB.jpg" alt="一位娃包">
+        <div class="product-title">一位娃包 - $240</div>
         <div class="member-row" data-member="柚"><span class="member-name">柚</span><button class="qty-btn" onclick="updateQty(this, -1)">-</button><input type="number" class="qty-input" value="0" readonly><button class="qty-btn" onclick="updateQty(this, 1)">+</button></div>
       </div>
-      <div class="product-card" data-price="860">
-        <img src="image/K1.jpg" alt="生日化妝包">
-        <div class="product-title">生日化妝包 - $860</div>
-        <div class="member-row" data-member="柚"><span class="member-name">柚</span><button class="qty-btn" onclick="updateQty(this, -1)">-</button><input type="number" class="qty-input" value="0" readonly><button class="qty-btn" onclick="updateQty(this, 1)">+</button></div>
-      </div>
+ 
     </div>
     <!--需要更改的地方1end-->
     
