--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="section-title">🛍️ 開團中的商品</div>
     <div class="group-list">
       <div class="group-card">
-        <img src="image/item1.png" alt="立牌團">
+        <img src="image/K-doll-bag/DB.jpg" alt="立牌團">
         <h3>立牌團</h3>
         <p>人氣角色限時開團，數量有限，先搶先贏！</p>
         <a href="buying/index-K-doll-bag.html">進入此團</a>
