--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="section-title">🛍️ 開團中的商品</div>
     <div class="group-list">
       <div class="group-card">
-        <img src="image/K-doll-bag/DB.jpg" alt="立牌團">
-        <h3>立牌團</h3>
+        <img src="image/K-doll-bag/DB.jpg" alt="柚吧一位娃包">
+        <h3>柚吧一位娃包</h3>
         <p>人氣角色限時開團，數量有限，先搶先贏！</p>
         <a href="buying/index-K-doll-bag.html">進入此團</a>
       </div>
