暫存目前的修改

--- a/buying/index-K-doll-bag.html
+++ b/buying/index-K-doll-bag.html
@@ -60,24 +60,11 @@
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="info-box">
-      <p class="notice-title">下單須知</p>
-      <p>嚴禁第三方匯款！</p>
-      <p>請確認購買的商品與金額皆正確後再送出訂單</p>
-      <p>後續需二補，一律+20賣貨便</p>
-      <p>可寄交貨便保值，需主動提出，運費自行負擔</p>
-      <p>寄賣貨便則默認商品運輸風險自行承擔</p>
-      <p>商品最多存放兩個星期，超過兩星期不下單的話收取一天五元的倉儲費，會先寄email提醒並在群組@至少五次</p>
-      <p>存放超過一個月則銷毀或釋出，退款金額最低以我釋出的金額為主</p>
-      <p>因為市價可能有變動，最多退款您原付款的全額，且若有轉帳手續費需要您負擔</p>
-    </div>
-
     <!--需要更改的地方1-->
     <div class="product-wrapper">
       <div class="product-card" data-price="240">
-        <img src="image/K-doll-bag/DB.jpg" alt="一位娃包">
-        <div class="product-title">一位娃包 - $240</div>
+        <img src="/image/K-doll-bag/DB.jpg" alt="一位娃包">
+        <div class="product-title">一位娃包 - $220</div>
         <div class="member-row" data-member="柚"><span class="member-name">柚</span><button class="qty-btn" onclick="updateQty(this, -1)">-</button><input type="number" class="qty-input" value="0" readonly><button class="qty-btn" onclick="updateQty(this, 1)">+</button></div>
       </div>
  
