--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .group-list { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
     .group-card { background: white; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); width: 250px; overflow: hidden; text-align: center; transition: transform 0.2s; }
     .group-card:hover { transform: translateY(-5px); }
-    .group-card img { width: 100%; height: 160px; object-fit: cover; }
+    .group-card img { width: 80%; height: 200px; object-fit: cover; }
     .group-card h3 { margin: 10px 0; color: #333; font-size: 18px; }
     .group-card p { padding: 0 10px 10px; font-size: 14px; color: #666; }
     .group-card a { display: block; background: #6e46ae; color: white; text-decoration: none; padding: 10px; border-radius: 0 0 10px 10px; }
@@ -29,7 +29,7 @@
       <div class="group-card">
         <img src="image/K-doll-bag/DB.jpg" alt="柚吧一位娃包">
         <h3>柚吧一位娃包</h3>
-        <p>人氣角色限時開團，數量有限，先搶先贏！</p>
+        <p>柚吧數量有限，隨時截止!</p>
         <a href="buying/index-K-doll-bag.html">進入此團</a>
       </div>
     </div>
