--- a/buying/index-K-doll-bag.html
+++ b/buying/index-K-doll-bag.html
@@ -39,12 +39,12 @@
     body { font-family: "Noto Sans TC", sans-serif; background: #f3f3f3; margin: 0; padding: 0; }
     .container { max-width: 800px; margin: auto; background: #fff; padding: 20px; }
     .product-wrapper { display: flex; justify-content: center; flex-wrap: wrap; gap: 40px; }
-    .product-card { background: white; padding: 20px; border-radius: 10px; border: 1.5px solid #ccc; text-align: center; width: 250px; }
+    .product-card { margin-top: 30px;background: white; padding: 20px; border-radius: 10px; border: 1.5px solid #ccc; text-align: center; width: 250px; }
     .product-card img { width: 200px; height: 200px; object-fit: cover; border-radius: 8px; }
     .product-title {font-size: 20px; font-weight: bold; margin-top: 20px; margin-bottom: 20px;}
     .member-row { display: flex; justify-content: center; align-items: center; margin-top: 10px; gap: 10px; }
     .member-name { width: 30px; }
-    .payment-notice { background:	#c8b6e2; color: white; padding: 5px; border-radius: 10px; text-align: center; line-height:0.8;  margin-bottom: 30px;font-size:15px; }
+    .payment-notice { background:	#a798bd; color: white; padding: 5px; border-radius: 10px; text-align: center; line-height:0.8;  margin-bottom: 30px;font-size:15px; }
     .qty-btn { width: 30px; height: 30px; background: #d7a9f9; border: none; border-radius: 5px; color: white; font-size: 18px; cursor: pointer; }
     .qty-input { width: 40px; height: 30px; text-align: right; line-height: 30px; font-size: 16px; border: 1px solid #ccc; border-radius: 5px; }
     .form-group { margin-top: 15px; }
