--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .section { max-width: 900px; margin: auto; padding: 10px 20px; }
     .section-title { font-size: 22px; margin-bottom: 20px; color: #6e46ae; border-bottom: 2px solid #eee; padding-bottom: 10px; }
     .group-list { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
-    .group-card { background: white; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); width: 250px; overflow: hidden; text-align: center; transition: transform 0.2s; }
+    .group-card { margin-top: 10px;background: white; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); width: 250px; overflow: hidden; text-align: center; transition: transform 0.2s; }
     .group-card:hover { transform: translateY(-5px); }
     .group-card img { width: 80%; height: 200px; object-fit: cover; }
     .group-card h3 { margin: 10px 0; color: #333; font-size: 18px; }
