--- a/buying/index-K-doll-bag.html
+++ b/buying/index-K-doll-bag.html
@@ -84,7 +84,7 @@
         <p>無卡:請填寫確切日期時間並無卡至百位數，剩餘二補</p>
       </div>
       
-      <div class="form-group"><label for="email">*電子郵件，核對訂單用</label><input type="email" id="email" required></div>
+      <div class="form-group"><label for="email">*Gmail信箱，核對訂單用</label><input type="text" id="email" placeholder="xxxxx@gmail.com" required></div>
       <div class="form-group"><label for="name">*社群內您的姓名，填單後禁止改名，若因買家改名找不到人而造成損失我方不負責</label><input type="text" id="name" required></div>
       <div class="form-group"><label for="amount">*匯款/無卡金額，先匯款完才能送單</label><input type="text" id="amount" required></div>
       <div class="form-group"><label for="bank">匯款這裡!匯款銀行+您的末五碼</label><input type="text" id="bank" required></div>
@@ -144,7 +144,17 @@
     }
 
     function submitOrder() {
-      const email = document.getElementById("email").value.trim();
+      let emailInput = document.getElementById("email").value.trim();
+      if (!emailInput.includes("@")) {
+        emailInput += "@gmail.com";
+      }
+      const email = emailInput;
+      if (!email.endsWith("@gmail.com")) {
+        alert("只接受 Gmail 帳號，請重新確認您的 Email！");
+        return;
+      }
+
+
       const name = document.getElementById("name").value.trim();
       const amount = document.getElementById("amount").value.trim();
       const bank = document.getElementById("bank").value.trim();
@@ -171,7 +181,7 @@
         "entry.1495098578": agree,
         "entry.1094702615": document.getElementById("total-price").innerText
       };
-      /* 需要更改的地方2end */
+      /* 需要更改的地方2end */s.ncku.edu.tw
 
       productData.forEach(({ name, entry, card }) => {
         const memberCounts = {};
