--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
   </div>
 
   <div class="section">
-    <div class="section-title">📬 聯絡我</div>
-    <p>如需協助或詢問庫存，歡迎私訊 FB：<strong>鄭亞儀</strong> 或於line社群提問 至 <strong>arwen@gmail.com</strong>。</p>
-  </div>
+    <div class="section-title">📬 Contact me</div>
+    <p>
+      如需協助或詢問庫存，歡迎
+      <a href="https://www.facebook.com/arwen.0317" target="_blank">私訊 FB</a>，
+      或於
+      <a href="https://line.me/ti/g2/_Oja-IfWXBsWrNmK_p_5LcWbPDa69gQw6Wwn0g?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank">line社群</a>
+      提問。
+    </p>
+      </div>
 
   <div class="footer">© 2025 Arwen 開團購物頁面</div>
 </body>
