--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         <p>柚吧數量有限，隨時截止!</p>
         <a href="buying/index-K-doll-bag.html">進入此團</a>
       </div>
+      <div class="group-card">
+        <img src="image/karina-butter/cat.jpeg" alt="柚吧奶油芝士貓餘量">
+        <h3>68奶油芝士貓餘量</h3>
+        <p>僅限已通知喊單成功者下單
+        </p>
+        <a href="buying/karina-butter.html">進入此團</a>
+      </div>
     </div>
   </div>
 
