--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Noto Sans TC', sans-serif; margin: 0; background: #f7f7f7; }
-    header { background: #6e46ae; color: white; padding: 20px; text-align: center; font-size: 24px; }
+    header { background: #6e46ae; color: white; padding: 0px; text-align: center; font-size: 24px; }
     .section { max-width: 900px; margin: auto; padding: 10px 20px; }
     .section-title { font-size: 22px; margin-bottom: 20px; color: #6e46ae; border-bottom: 2px solid #eee; padding-bottom: 10px; }
     .group-list { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
@@ -21,7 +21,9 @@
   </style>
 </head>
 <body>
-  <header>Arwen首頁</header>
+  <header>
+    <img src="image/home/head.jpg" alt="Arwen首頁" style="width: 100%; display: block;">
+  </header>  
   <div class="section">
     <div class="section-title">📌 購物須知</div>
     <p>嚴禁第三方匯款！</p>
