--- a/done.html
+++ b/done.html
@@ -22,8 +22,9 @@
     }
 
     .content-box {
-      background-color: rgba(255, 255, 255, 0.88); /* 半透明白背景讓文字清晰 */
-      padding: 40px 30px;
+      background-color: rgba(255, 255, 255, 0.5); /* 半透明白背景讓文字清晰 */
+      padding: 20px 30px;
+      margin-top: -90px;
       border-radius: 20px;
       text-align: center;
       max-width: 500px;
@@ -72,7 +73,7 @@
     <h1>✅ 訂單已成功送出</h1>
     <p>請檢查信箱內是否有收到訂單確認信～</p>
     <p>若沒有的話可能在垃圾信件內！</p>
-    <p>感謝您的購買，Arwen 會盡快處理您的訂單 🙏</p>
+    <p>感謝您的購買，Arwen會盡快處理您的訂單 🙏</p>
     <p><a href="https://docs.google.com/spreadsheets/d/1KaV443TtOSrep1rvxfOiZ21VuobxED-zyMd7eUVmock/edit?usp=sharing" target="_blank">📄 點我查看對帳表</a></p>
     <a href="index.html" class="btn">🔙 返回首頁</a>
   </div>
