--- a/done.html
+++ b/done.html
@@ -24,7 +24,7 @@
     .content-box {
       background-color: rgba(255, 255, 255, 0.5); /* 半透明白背景讓文字清晰 */
       padding: 20px 30px;
-      margin-top: -90px;
+      margin-top: -110px;
       border-radius: 20px;
       text-align: center;
       max-width: 500px;
@@ -34,7 +34,7 @@
 
     h1 {
       font-size: 28px;
-      color: #2c7c44;
+      color: #6e46ae;
       margin-bottom: 20px;
     }
 
