--- a/done.html
+++ b/done.html
@@ -41,7 +41,7 @@
     p {
       font-size: 18px;
       color: #333;
-      line-height: 1.6;
+      line-height: 1.5;
       margin-top: 10px;
     }
 
@@ -55,7 +55,7 @@
       display: inline-block;
       margin-top: 20px;
       padding: 10px 20px;
-      background-color: #6e46ae;
+      background-color: #9574cb;
       color: white;
       text-decoration: none;
       border-radius: 8px;
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="content-box">
-    <h1>✅ 訂單已成功送出</h1>
+    <h1>❤️🌙訂單已成功送出❄️🦋</h1>
     <p>請檢查信箱內是否有收到訂單確認信～</p>
     <p>若沒有的話可能在垃圾信件內</p>
     <p>感謝您的購買!</p>
