--- a/done.html
+++ b/done.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="content-box">
-    <h1>❤️🌙訂單已成功送出❄️🦋</h1>
+    <h1>❤️🌙訂單成功送出❄️🦋</h1>
     <p>請檢查信箱內是否有收到訂單確認信～</p>
     <p>若沒有的話可能在垃圾信件內</p>
     <p>感謝您的購買!</p>
