--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     .section { max-width: 900px; margin: auto; padding: 10px 20px; }
     .section-title { font-size: 22px; margin-bottom: 20px; color: #6e46ae; border-bottom: 2px solid #eee; padding-bottom: 10px; }
     .group-list { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
-    .group-card { margin-top: 10px;background: white; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); width: 250px; overflow: hidden; text-align: center; transition: transform 0.2s; }
+    .group-card { margin-top:10px;background: white; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); width: 250px; overflow: hidden; text-align: center; transition: transform 0.2s; }
     .group-card:hover { transform: translateY(-5px); }
-    .group-card img { width: 80%; height: 200px; object-fit: cover; }
+    .group-card img { width: 80%; height: 200px; object-fit: cover; margin-top:20px;}
     .group-card h3 { margin: 10px 0; color: #333; font-size: 18px; }
     .group-card p { padding: 0 10px 10px; font-size: 14px; color: #666; }
     .group-card a { display: block; background: #6e46ae; color: white; text-decoration: none; padding: 10px; border-radius: 0 0 10px 10px; }
@@ -42,15 +42,8 @@
       <div class="group-card">
         <img src="image/K-doll-bag/DB.jpg" alt="柚吧一位娃包">
         <h3>柚吧一位娃包</h3>
-        <p>柚吧數量有限，隨時截止!</p>
+        <p>確定購買到的:餘1</p>
         <a href="buying/index-K-doll-bag.html">進入此團</a>
-      </div>
-      <div class="group-card">
-        <img src="image/karina-butter/cat.jpeg" alt="柚吧奶油芝士貓餘量">
-        <h3>68奶油芝士貓餘量</h3>
-        <p>僅限已通知喊單成功者下單
-        </p>
-        <a href="buying/karina-butter.html">進入此團</a>
       </div>
     </div>
   </div>
