--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <p>嚴禁第三方匯款！</p>
     <p>請確認購買的商品與金額皆正確後再送出訂單</p>
     <p>後續需二補，一律+20賣貨便</p>
-    <p>可+20寄交貨便保值，需主動提出，運費自行負擔</p>
-    <p>以上20爲包裝費+人力費，一個訂單僅需下一個20<p>
+    <p>可+20寄交貨便保值需主動提出，運費自行負擔</p>
+    <p>以上20爲包裝+人力費，一個訂單僅需下一個20<p>
     <p>寄賣貨便則默認商品運輸風險自行承擔</p>
     <p>商品最多存放兩個星期，超過兩星期不下單的話收取一天五元的倉儲費，會先寄email提醒並在群組@至少五次</p>
     <p>存放超過一個月則銷毀或釋出，退款金額最低以我釋出的金額為主</p>
